@@ -1,0 +1,3 @@
+import shoppingSaverPlugin
+
+plugins = [shoppingSaverPlugin.ShoppingListSaver]
